--- a/landing.css
+++ b/landing.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #7da2a9;
+  background-color: #4bffa5;
   color: #f7f7f7;
   line-height: 1.6;
   text-align: center;
@@ -15,6 +15,7 @@ body {
   max-width: 960px;
   margin: auto;
   padding: 0 30px;
+  color: white;
 }
 
 #showcase {
@@ -27,6 +28,7 @@ body {
   position: relative;
   animation: heading 3s;
   animation-fill-mode: forwards;
+  color: #040f3d;
 }
 
 @keyframes heading {
@@ -56,10 +58,11 @@ body {
 
 .btn {
   display: inline-block;
-  color: #fff;
+  color: #040f3d;
   text-decoration: none;
   padding: 1rem 2rem;
-  border: #fff 1px solid;
+  border: #040f3d 2px solid;
+  border-radius: 50%;
   margin-top: 40px;
   opacity: 0;
   animation: btn 3s;
