--- a/landing.css
+++ b/landing.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #4bffa5;
+  background-color: orangered;
   color: #f7f7f7;
   line-height: 1.6;
   text-align: center;
